--- a/package.json
+++ b/package.json
@@ -38,14 +38,17 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "@xenova/transformers": "^2.17.2",
     "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.3.0",
     "genkit": "^1.6.2",
     "lucide-react": "^0.475.0",
-    "next": "15.2.3",
+    "next": "^15.3.1",
+    "openai": "^4.97.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -54,14 +57,15 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "file-saver": "^2.0.5"
+    "unorm": "^1.6.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/file-saver": "^2.0.7",
+    "@types/unorm": "^1.3.31",
     "genkit-cli": "^1.6.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
