--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "@xenova/transformers": "^2.17.2",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -48,8 +48,9 @@
     "genkit": "^1.6.2",
     "lucide-react": "^0.475.0",
     "next": "^15.3.1",
+    "node-fetch": "^2.7.0",
     "openai": "^4.97.0",
-    "papaparse": "^5.5.2",
+    "papaparse": "^5.5.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -63,7 +64,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
-    "@types/node": "^20",
+    "@types/node": "^20.19.0",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -71,6 +72,7 @@
     "genkit-cli": "^1.6.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
